Update OpenAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -81,7 +81,7 @@ graphqlVersion=0.7.0
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.1-20230714-144300-da798b5
+openapiVersion=1.7.1
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
