--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -284,8 +284,10 @@ task combineDocs(type: Exec) {
 task packageDist(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Tools Distribution Assembly'
-    baseName = "${distributionName}"
-    ext { parentDir = "${baseName}-${shortVersion}" }
+    ext {
+        baseName = "${distributionName}"
+        parentDir = "${baseName}-${shortVersion}"
+    }
     archiveFileName = "${baseName}-${shortVersion}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
@@ -327,8 +329,10 @@ task packageDist(type: Zip) {
 task packageDistZip(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Distribution Assembly'
-    baseName = "${distributionName}-${version}"
-    ext { parentDir = "${baseName}-${codeName}" }
+    ext {
+        baseName = "${distributionName}-${version}"
+        parentDir = "${baseName}-${codeName}"
+    }
     archiveFileName = "${distributionName}-${version}-${codeName}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
@@ -410,12 +414,14 @@ task packageDistZip(type: Zip) {
 task packageDistLinux(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Linux Distribution Assembly'
-    baseName = "${distributionName}-${version}"
-    ext { parentDir = "${baseName}-${codeName}-linux" }
+    ext {
+        baseName = "${distributionName}-${version}"
+        parentDir = "${baseName}-${codeName}-linux"
+    }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies") {
+    into("${parentDir}/dependencies/${dependencyJREVersion}") {
         from "build/target/extracted-jre-linux"
         fileMode = 0755
     }
@@ -497,12 +503,14 @@ task packageDistLinux(type: Zip) {
 task packageDistMac(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina MacOS Distribution Assembly'
-    baseName = "${distributionName}-${version}"
-    ext { parentDir = "${baseName}-${codeName}-macos" }
+    ext {
+        baseName = "${distributionName}-${version}"
+        parentDir = "${baseName}-${codeName}-macos"
+    }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies") {
+    into("${parentDir}/dependencies/${dependencyJREVersion}") {
         from "build/target/extracted-jre-macos"
         fileMode = 0755
     }
@@ -580,12 +588,14 @@ task packageDistMac(type: Zip) {
 task packageDistMacArm(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina MacOS-ARM Distribution Assembly'
-    baseName = "${distributionName}-${version}"
-    ext { parentDir = "${baseName}-${codeName}-macos-arm" }
+    ext {
+        baseName = "${distributionName}-${version}"
+        parentDir = "${baseName}-${codeName}-macos-arm"
+    }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies") {
+    into("${parentDir}/dependencies/${dependencyJREVersion}") {
         from "build/target/extracted-jre-macos-arm"
         fileMode = 0755
     }
@@ -663,12 +673,14 @@ task packageDistMacArm(type: Zip) {
 task packageDistWindows(type: Zip) {
     group = "package_distribution"
     description = 'Ballerina Windows Distribution Assembly'
-    baseName = "${distributionName}-${version}"
-    ext { parentDir = "${baseName}-${codeName}-windows" }
+    ext {
+        baseName = "${distributionName}-${version}"
+        parentDir = "${baseName}-${codeName}-windows"
+    }
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies") {
+    into("${parentDir}/dependencies/${dependencyJREVersion}") {
         from "build/target/extracted-jre-windows"
         fileMode = 0755
     }
@@ -801,7 +813,7 @@ task testExamples() {
 
         if (bbe.startsWith('mysql')) {
             def tomlFile = new File("${distPath}/${bbe}/Ballerina.toml")
-            tomlFile.append("\n\n[[platform.java17.dependency]]")
+            tomlFile.append("\n\n[[platform.java11.dependency]]")
             tomlFile.append("\npath = \"$distPath/lib/mysql-connector-java-8.0.21.jar\"\n")
         }
 
@@ -1373,7 +1385,7 @@ task generateCache(dependsOn: ':cache-generator:build') {
                                 def moduleName = dependency.module_name[i].toString() + "-ballerina-zip"
                                 if ( sortedLibs.contains(moduleName) ) {
                                     if ( !dependencyMap["${moduleName}"].contains(dependency.version[i].toString()))
-                                    dependencyMap["${moduleName}"].add(dependency.version[i].toString())
+                                        dependencyMap["${moduleName}"].add(dependency.version[i].toString())
                                 }
                             }
                         }
