--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.0-20230727-003800-1e28764e
+ballerinaLangVersion=2201.8.0-20230728-113600-8356e707
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2023R1
@@ -83,7 +83,7 @@ graphqlVersion=0.7.1-20230720-140900-c92185d
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.0
+openapiVersion=1.8.0-20230729-184100-53e497f
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
