--- a/.github/workflows/language_server_simulator_nballerina.yml
+++ b/.github/workflows/language_server_simulator_nballerina.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [ "master", "2201.8.x", "2201.7.x" ]
+        branch: [ "master" ]
         skipGenerators: [ "", "IMPORT_STATEMENT" ]
 
     steps:
