--- a/.github/workflows/language_server_simulator_fhir.yml
+++ b/.github/workflows/language_server_simulator_fhir.yml
@@ -76,6 +76,7 @@ jobs:
           --data "{
             \"event_type\": \"notify-simulator-failure\",
             \"client_payload\": {
-              \"branch\": \"${{ matrix.branch }}\"
+              \"branch\": \"${{ matrix.branch }}\",
+              \"runId\":\"${{github.run_id}}\"
             }
           }"
