Update release repo branch for stdlibs reference

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2023R1
 slf4jVersion=1.7.30
-balstdlibBranch=master
+balstdlibBranch=2201.7.x
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
