Update lang timestamp version for `2201.7.2`

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.7.1-SNAPSHOT
+version=2201.7.2-SNAPSHOT
 codeName=swan-lake
-ballerinaLangVersion=2201.7.1
+ballerinaLangVersion=2201.7.2-20230808-144500-f1d5235c
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2023R1
@@ -91,4 +91,4 @@ c2cVersion=2.8.0
 
 dataMapperVersion=2.2.0
 
-installerVersion=d53664ce-a948-4b30-8de6-28e01366d0ab
+installerVersion=d836626b-a5ee-4ee9-a565-af2eb5cfd0d1
