Update OpenAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ graphqlVersion=0.7.0
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.1
+openapiVersion=1.7.2-20230809-102300-14970bd
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
