--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -421,7 +421,7 @@ task packageDistLinux(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-linux"
         fileMode = 0755
     }
@@ -510,7 +510,7 @@ task packageDistMac(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-macos"
         fileMode = 0755
     }
@@ -595,7 +595,7 @@ task packageDistMacArm(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-macos-arm"
         fileMode = 0755
     }
@@ -680,7 +680,7 @@ task packageDistWindows(type: Zip) {
     archiveFileName = "${parentDir}.zip"
     entryCompression = ZipEntryCompression.DEFLATED
 
-    into("${parentDir}/dependencies/${dependencyJREVersion}") {
+    into("${parentDir}/dependencies") {
         from "build/target/extracted-jre-windows"
         fileMode = 0755
     }
