--- a/gradle.properties
+++ b/gradle.properties
@@ -13,76 +13,76 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibConstraintVersion=1.3.0
-stdlibIoVersion=1.5.0
+stdlibConstraintVersion=1.4.0-20230815-095500-4e8fae5
+stdlibIoVersion=1.6.0-20230815-095000-775a431
 stdlibJavaArraysVersion=1.3.0
-stdlibTimeVersion=2.3.0
-stdlibUrlVersion=2.3.0
+stdlibTimeVersion=2.4.0-20230815-095100-ad36dad
+stdlibUrlVersion=2.4.0-20230815-095600-c486afa
 stdlibXmldataVersion=2.6.1
-observeVersion=1.1.0
+observeVersion=1.2.0-20230815-095100-d0b0de4
 stdlibMathVectorVersion=1.0.1
 
 
 # Stdlib Level 02
-stdlibCryptoVersion=2.4.0
-stdlibLogVersion=2.8.1-20230718-085900-36c385c
-stdlibOsVersion=1.7.0
-stdlibProtobufVersion=1.5.0
+stdlibCryptoVersion=2.5.0-20230815-095600-0ee3198
+stdlibLogVersion=2.9.0-20230816-002000-eaea069
+stdlibOsVersion=1.8.0-20230815-095700-96a4c58
+stdlibProtobufVersion=1.6.0-20230815-220300-57f52f7
 stdlibRandomVersion=1.4.0
-stdlibTaskVersion=2.4.0
+stdlibTaskVersion=2.5.0-20230815-220300-8faaba9
 stdlibXsltVersion=2.5.0
 observeInternalVersion=1.1.0
 
 # Stdlib Level 03
-stdlibCacheVersion=3.6.0
-stdlibFileVersion=1.8.1
+stdlibCacheVersion=3.7.0-20230816-002400-1047212
+stdlibFileVersion=1.9.0-20230816-002900-21b1e5f
 stdlibFtpVersion=2.8.1-20230718-100900-aaef72b
-stdlibMimeVersion=2.8.0
+stdlibMimeVersion=2.9.0-20230816-002400-359c461
 stdlibTcpVersion=1.8.0
 stdlibUdpVersion=1.8.0
-stdlibUuidVersion=1.6.0
+stdlibUuidVersion=1.7.0-20230816-001700-9933a41
 
 # Stdlib Level 04
-stdlibAuthVersion=2.9.0
+stdlibAuthVersion=2.10.0-20230816-002400-d604285
 stdlibEmailVersion=2.8.1-20230720-093800-a2c55d0
-stdlibJwtVersion=2.9.0
-stdlibOAuth2Version=2.9.0
+stdlibJwtVersion=2.10.0-20230816-003800-d504fd5
+stdlibOAuth2Version=2.10.0-20230816-002400-b6cea6c
 stdlibYamlVersion=0.4.1-20230720-093500-3b33719
 stdlibTomlVersion=0.4.0
 stdlibEdiVersion=1.0.6-20230720-105300-db5a2fb
 
 # Stdlib Level 05
-stdlibHttpVersion=2.9.1-20230712-161400-d16a019
+stdlibHttpVersion=2.10.0-20230816-003400-5c82fda
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.9.1-20230720-093600-e476d75
-stdlibTransactionVersion=1.7.0-20230724-121800-61fea60
-stdlibWebsocketVersion=2.9.1-20230718-133100-1515098
-stdlibWebsubVersion=2.9.1-20230720-002500-d909581
-stdlibWebsubhubVersion=1.9.1-20230720-093500-d98cb16
+stdlibGrpcVersion=1.10.0-20230816-004100-2c618f2
+stdlibTransactionVersion=1.8.0-20230816-004200-c647e17
+stdlibWebsocketVersion=2.10.0-20230816-004200-999dcee
+stdlibWebsubVersion=2.10.0-20230816-004200-cf1a4cd
+stdlibWebsubhubVersion=1.10.0-20230816-004200-42bfa5e
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.9.1-20230808-171800-db88774
-stdlibSqlVersion=1.10.0
+stdlibGraphqlVersion=1.10.0-20230816-004200-cd90672
+stdlibSqlVersion=1.11.0-20230816-004300-c39a3ff
 
 # Stdlib Level 08
-stdlibPersistVersion=1.1.0
+stdlibPersistVersion=1.2.0-20230815-134100-3c6268e
 
 # Persist Tool
-persistToolVersion=1.1.0
+persistToolVersion=1.1.1-20230815-154600-162c9e3
 
 # Dev Tools
 devToolsVersion=1.2.0
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.7.1-20230720-140900-c92185d
+graphqlVersion=0.7.1-20230816-004300-12ef416
 
 # Protoc Tool
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.0
+openapiVersion=1.8.0-20230815-115900-fb87b6b
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
