--- a/gradle.properties
+++ b/gradle.properties
@@ -44,12 +44,13 @@ stdlibUuidVersion=1.7.0-20230816-001700-9933a41
 
 # Stdlib Level 04
 stdlibAuthVersion=2.10.0-20230816-002400-d604285
+stdlibEdiVersion=1.0.6-20230720-105300-db5a2fb
 stdlibEmailVersion=2.8.1-20230720-093800-a2c55d0
 stdlibJwtVersion=2.10.0-20230816-003800-d504fd5
 stdlibMqttVersion=1.0.0-20230815-175100-0d29770
 stdlibOAuth2Version=2.10.0-20230816-002400-b6cea6c
-stdlibYamlVersion=0.4.1-20230720-093500-3b33719
 stdlibTomlVersion=0.4.0
+stdlibYamlVersion=0.4.1-20230720-093500-3b33719
 
 # Stdlib Level 05
 stdlibHttpVersion=2.10.0-20230816-003400-5c82fda
