--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,6 +28,7 @@ jobs:
                     packageUser: ${{ github.actor }}
                     packagePAT: ${{ secrets.GITHUB_TOKEN }}
                     devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
+                    githubAccessToken: ${{ secrets.GITHUB_TOKEN }}
                     ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
                 run: ./gradlew clean build --stacktrace --scan --console=plain --no-daemon --continue -x :ballerina:testExamples -x :project-api-tests:test
 
@@ -50,6 +51,7 @@ jobs:
                     packageUser: ${{ github.actor }}
                     packagePAT: ${{ secrets.GITHUB_TOKEN }}
                     devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
+                    githubAccessToken: ${{ secrets.GITHUB_TOKEN }}
                     ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
                 run: ./gradlew clean :ballerina:testExamples --stacktrace --scan --console=plain --no-daemon --continue -x :project-api-tests:test
     windows-build-without-tests:
@@ -72,5 +74,6 @@ jobs:
                   packagePAT: ${{ secrets.GITHUB_TOKEN }}
                   JAVA_TOOL_OPTIONS: -Dfile.encoding=UTF8
                   devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
+                  githubAccessToken: ${{ secrets.GITHUB_TOKEN }}
                   ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
               run: ./gradlew.bat clean build --stacktrace --scan --console=plain --no-daemon --continue -x test
