Update soap module timestamp version

--- a/gradle.properties
+++ b/gradle.properties
@@ -56,6 +56,7 @@ stdlibHttpVersion=2.10.0-20230816-003400-5c82fda
 
 # Stdlib Level 06
 stdlibGrpcVersion=1.10.0-20230816-004100-2c618f2
+stdlibSoapVersion=0.2.0-20230821-111200-007b34e
 stdlibTransactionVersion=1.8.0-20230816-004200-c647e17
 stdlibWebsocketVersion=2.10.0-20230816-004200-999dcee
 stdlibWebsubVersion=2.10.0-20230816-004200-cf1a4cd
