Add mqtt module to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -50,6 +50,7 @@ stdlibOAuth2Version=2.10.0-20230816-002400-b6cea6c
 stdlibYamlVersion=0.4.1-20230720-093500-3b33719
 stdlibTomlVersion=0.5.0-20230816-002800-974e4c3
 stdlibEdiVersion=1.0.6-20230720-105300-db5a2fb
+stdlibMqttVersion=1.0.0-20230821-132000-32ac9a7
 
 # Stdlib Level 05
 stdlibHttpVersion=2.10.0-20230816-003400-5c82fda
