--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.5.2-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.5.1
+ballerinaLangVersion=2201.5.2-20230825-160600-2be0f24b
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 
