--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ graphqlVersion=0.7.0
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.2
+openapiVersion=1.7.3-20230831-173200-c80bec0
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
