--- a/.github/workflows/daily-build-2201.8.x.yml
+++ b/.github/workflows/daily-build-2201.8.x.yml
@@ -400,6 +400,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 2201.8.x
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17.0.7'
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '2.1.x'
