--- a/gradle.properties
+++ b/gradle.properties
@@ -89,7 +89,7 @@ openapiVersion=1.8.0-20230901-110600-c7d4d0e
 # AsyncAPI Module
 asyncapiVersion=0.6.0
 
-c2cVersion=2.3.2
+c2cVersion=2.11.0-20230901-110400-1333149
 
 dataMapperVersion=2.2.1-20230831-150600-0e37f32
 
