--- a/gradle.properties
+++ b/gradle.properties
@@ -84,7 +84,7 @@ graphqlVersion=0.5.1
 protocToolVersion=0.1.0
 
 # OpenAPI Module
-openapiVersion=1.5.1
+openapiVersion=1.5.2-20230905-115900-120e193
 
 # AsyncAPI Module
 asyncapiVersion=0.5.0
