Update GraphQL tool version

--- a/gradle.properties
+++ b/gradle.properties
@@ -76,7 +76,7 @@ devToolsVersion=1.2.0
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.7.0
+graphqlVersion=0.7.1-20230907-123400-9798f5f
 
 # Protoc Tool
 protocToolVersion=0.1.2
