Update lang version

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.5.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.6.2-20230907-231100-3134cfa2
+ballerinaLangVersion=2201.5.3-rc1
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 
