--- a/gradle.properties
+++ b/gradle.properties
@@ -89,7 +89,7 @@ openapiVersion=1.8.0-20230912-095800-77c5acf
 # AsyncAPI Module
 asyncapiVersion=0.6.0
 
-c2cVersion=2.3.2
+c2cVersion=2.11.0-20230912-093600-1369b0b
 
 dataMapperVersion=2.2.1-20230911-144600-d388d86
 
