--- a/gradle.properties
+++ b/gradle.properties
@@ -87,7 +87,7 @@ protocToolVersion=0.2.0-20230821-121200-8933a55
 openapiVersion=1.8.0-20230912-095800-77c5acf
 
 # AsyncAPI Module
-asyncapiVersion=0.6.0
+asyncapiVersion=0.7.0-20230912-163600-30824e3
 
 c2cVersion=2.11.0-20230912-093600-1369b0b
 
