--- a/gradle.properties
+++ b/gradle.properties
@@ -81,15 +81,15 @@ ballerinaCommandVersion=1.4.0
 graphqlVersion=0.8.0-20230912-091900-7746096
 
 # Protoc Tool
-protocToolVersion=0.2.0-20230821-121200-8933a55
+protocToolVersion=0.2.0-20230912-164100-6047bfb
 
 # OpenAPI Module
 openapiVersion=1.8.0-20230912-095800-77c5acf
 
 # AsyncAPI Module
-asyncapiVersion=0.6.0
+asyncapiVersion=0.7.0-20230912-163600-30824e3
 
-c2cVersion=2.3.2
+c2cVersion=2.11.0-20230912-093600-1369b0b
 
 dataMapperVersion=2.2.1-20230911-144600-d388d86
 
