Update stable versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.5.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.5.3-rc1
+ballerinaLangVersion=2201.5.3
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 
@@ -84,7 +84,7 @@ graphqlVersion=0.5.1
 protocToolVersion=0.1.0
 
 # OpenAPI Module
-openapiVersion=1.5.2-20230911-154400-bc0011f
+openapiVersion=1.5.2
 
 # AsyncAPI Module
 asyncapiVersion=0.5.0
