Update stdlib versions for update 8 release

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.0-20230830-220400-8a7556d8
+ballerinaLangVersion=2201.8.0
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -13,62 +13,62 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibConstraintVersion=1.4.0-20230831-142400-50e4023
-stdlibIoVersion=1.6.0-20230831-135000-049f91a
-stdlibJavaArraysVersion=1.4.0-20230831-135000-d7ceba6
-stdlibTimeVersion=2.4.0-20230831-134800-62143cd
-stdlibUrlVersion=2.4.0-20230831-134600-aab5a12
-stdlibXmldataVersion=2.7.0-20230831-135200-52e14b9
-observeVersion=1.2.0-20230831-133600-6d16df4
-stdlibMathVectorVersion=1.0.2-20230831-133300-710fabf
+stdlibConstraintVersion=1.4.0
+stdlibIoVersion=1.6.0
+stdlibJavaArraysVersion=1.4.0
+stdlibTimeVersion=2.4.0
+stdlibUrlVersion=2.4.0
+stdlibXmldataVersion=2.7.0
+observeVersion=1.2.0
+stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
-stdlibCryptoVersion=2.5.0-20230906-183600-c9d466b
-stdlibLogVersion=2.9.0-20230831-153100-9b73447
-stdlibOsVersion=1.8.0-20230831-142200-cb96913
-stdlibProtobufVersion=1.6.0-20230831-142300-81163ab
-stdlibRandomVersion=1.5.0-20230831-142400-d71749f
-stdlibTaskVersion=2.5.0-20230831-142600-ec5194a
-stdlibXsltVersion=2.6.0-20230831-142600-0c84131
-observeInternalVersion=1.2.0-20230831-141400-b3bbdc2
+stdlibCryptoVersion=2.5.0
+stdlibLogVersion=2.9.0
+stdlibOsVersion=1.8.0
+stdlibProtobufVersion=1.6.0
+stdlibRandomVersion=1.5.0
+stdlibTaskVersion=2.5.0
+stdlibXsltVersion=2.6.0
+observeInternalVersion=1.2.0
 
 # Stdlib Level 03
-stdlibCacheVersion=3.7.0-20230831-151700-7e2b0fa
-stdlibFileVersion=1.9.0-20230831-160900-252d078
-stdlibFtpVersion=2.9.0-20230831-160900-d76961a
-stdlibMimeVersion=2.9.0-20230831-160900-6ecc648
-stdlibTcpVersion=1.9.0-20230831-161800-3d4658f
-stdlibUdpVersion=1.9.0-20230831-161200-acbdce0
-stdlibUuidVersion=1.7.0-20230831-151800-012c311
+stdlibCacheVersion=3.7.0
+stdlibFileVersion=1.9.0
+stdlibFtpVersion=2.9.0
+stdlibMimeVersion=2.9.0
+stdlibTcpVersion=1.9.0
+stdlibUdpVersion=1.9.0
+stdlibUuidVersion=1.7.0
 
 # Stdlib Level 04
-stdlibAuthVersion=2.10.0-20230831-160500-17532df
+stdlibAuthVersion=2.10.0
 stdlibEdiVersion=1.0.7-20230831-164800-d8fd1c1
-stdlibEmailVersion=2.9.0-20230831-170300-2a02c2b
-stdlibJwtVersion=2.10.0-20230831-160800-b5db938
-stdlibMqttVersion=1.0.0-20230831-160600-42fa522
-stdlibOAuth2Version=2.10.0-20230831-161200-a4a83a6
-stdlibTomlVersion=0.5.0-20230831-170000-244ddb6
-stdlibYamlVersion=0.5.0-20230831-170000-94fddca
+stdlibEmailVersion=2.9.0
+stdlibJwtVersion=2.10.0
+stdlibMqttVersion=1.0.0
+stdlibOAuth2Version=2.10.0
+stdlibTomlVersion=0.5.0
+stdlibYamlVersion=0.5.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.10.0-20230831-195300-180df44
+stdlibHttpVersion=2.10.0
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.10.0-20230831-221200-3f0bada
-stdlibSoapVersion=0.2.0-20230831-210000-4b8659f
-stdlibTransactionVersion=1.8.0-20230831-210400-57edb68
-stdlibWebsocketVersion=2.10.0-20230831-212500-7bd0f7e
-stdlibWebsubVersion=2.10.0-20230831-211200-c6f33c4
-stdlibWebsubhubVersion=1.10.0-20230831-210000-695f161
+stdlibGrpcVersion=1.10.0
+stdlibSoapVersion=0.2.0
+stdlibTransactionVersion=1.8.0
+stdlibWebsocketVersion=2.10.0
+stdlibWebsubVersion=2.10.0
+stdlibWebsubhubVersion=1.10.0
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.10.0-20230914-151300-376b3a9
-stdlibSqlVersion=1.11.0-20230831-224400-d2491ed
+stdlibGraphqlVersion=1.10.0
+stdlibSqlVersion=1.11.0
 
 # Stdlib Level 08
-stdlibPersistVersion=1.2.0-20230831-142100-b7b968f
+stdlibPersistVersion=1.2.0
 
 # Persist Tool
 persistToolVersion=1.2.0-20230908-152500-2ba8c45
