Update persist tools version

--- a/gradle.properties
+++ b/gradle.properties
@@ -71,7 +71,7 @@ stdlibSqlVersion=1.11.0
 stdlibPersistVersion=1.2.0
 
 # Persist Tool
-persistToolVersion=1.2.0-20230912-113000-be8a359
+persistToolVersion=1.2.0
 
 # Dev Tools
 devToolsVersion=1.2.1-20230914-153500-664cd40
