Update math.vector version

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ stdlibTimeVersion=2.4.0
 stdlibUrlVersion=2.4.0
 stdlibXmldataVersion=2.7.0
 observeVersion=1.2.0
-stdlibMathVectorVersion=1.0.2-20230911-133200-40ad74b
+stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
