--- a/gradle.properties
+++ b/gradle.properties
@@ -74,7 +74,7 @@ stdlibPersistVersion=1.2.0-20230911-142300-ddef67b
 persistToolVersion=1.2.0-20230912-113000-be8a359
 
 # Dev Tools
-devToolsVersion=1.3.0
+devToolsVersion=1.2.1-20230914-153500-664cd40
 ballerinaCommandVersion=1.4.0
 
 # GraphQL Tool
