update graphql version

--- a/gradle.properties
+++ b/gradle.properties
@@ -78,7 +78,7 @@ devToolsVersion=1.2.1-20230914-153500-664cd40
 ballerinaCommandVersion=1.4.0
 
 # GraphQL Tool
-graphqlVersion=0.8.0-20230914-153500-87f60d6
+graphqlVersion=0.8.0
 
 # Protoc Tool
 protocToolVersion=0.2.0-20230912-164100-6047bfb
