Update edi version

--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ stdlibUuidVersion=1.7.0
 
 # Stdlib Level 04
 stdlibAuthVersion=2.10.0
-stdlibEdiVersion=1.0.7
+stdlibEdiVersion=1.0.7-20230911-162800-71ba735
 stdlibEmailVersion=2.9.0
 stdlibJwtVersion=2.10.0
 stdlibMqttVersion=1.0.0
@@ -71,7 +71,7 @@ stdlibSqlVersion=1.11.0
 stdlibPersistVersion=1.2.0
 
 # Persist Tool
-persistToolVersion=1.2.0-20230912-113000-be8a359
+persistToolVersion=1.2.0
 
 # Dev Tools
 devToolsVersion=1.2.1-20230914-153500-664cd40
