--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ stdlibUuidVersion=1.7.0
 
 # Stdlib Level 04
 stdlibAuthVersion=2.10.0
-stdlibEdiVersion=1.0.7-20230911-162800-71ba735
+stdlibEdiVersion=1.1.0
 stdlibEmailVersion=2.9.0
 stdlibJwtVersion=2.10.0
 stdlibMqttVersion=1.0.0
@@ -73,21 +73,21 @@ stdlibPersistVersion=1.2.0
 persistToolVersion=1.2.0
 
 # Dev Tools
-devToolsVersion=1.2.1-20230914-153500-664cd40
+devToolsVersion=1.3.0
 ballerinaCommandVersion=1.4.0
 
 # GraphQL Tool
-graphqlVersion=0.8.0-20230914-153500-87f60d6
+graphqlVersion=0.8.0
 
 # Protoc Tool
-protocToolVersion=0.2.0-20230912-164100-6047bfb
+protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.0-20230912-095800-77c5acf
+openapiVersion=1.8.0
 
 # AsyncAPI Module
-asyncapiVersion=0.7.0-20230912-163600-30824e3
+asyncapiVersion=0.7.0
 
-c2cVersion=2.11.0-20230912-093600-1369b0b
+c2cVersion=2.11.0
 
 installerVersion=69c0a0e-9c6a-4062-ae1e-2209c25e4f51
