--- a/gradle.properties
+++ b/gradle.properties
@@ -76,7 +76,7 @@ devToolsVersion=1.2.0
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.7.1-20230927-151600-3e8ef4b
+graphqlVersion=0.7.1
 
 # Protoc Tool
 protocToolVersion=0.1.2
