Update OpenAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ graphqlVersion=0.7.1
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.3-20230927-152400-740f5e4
+openapiVersion=1.7.3
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
