Update grpc version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.caching=true
+jorg.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
 version=2201.8.1-SNAPSHOT
@@ -56,7 +56,7 @@ stdlibYamlVersion=0.5.0
 stdlibHttpVersion=2.10.1
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.10.0
+stdlibGrpcVersion=1.10.1
 stdlibTransactionVersion=1.8.0
 stdlibWebsocketVersion=2.10.0
 stdlibWebsubVersion=2.10.0
