--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-jorg.gradle.caching=true
+org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
 version=2201.8.1-SNAPSHOT
