--- a/project-api-tests/src/test/resources/maven-repos/test-resolution/Ballerina.toml
+++ b/project-api-tests/src/test/resources/maven-repos/test-resolution/Ballerina.toml
@@ -1,18 +1,13 @@
 [package]
-org = "luheerathan"
+org = "bctestorg"
 name = "test"
 version = "0.1.0"
 
 [build-options]
 observabilityIncluded = true
 
-
  [[dependency]]
- org = "luheerathan"
+ org = "bctestorg"
  name = "pact"
  version = "0.2.0"
  repository="github1"
-
-
-
-
