--- a/gradle.properties
+++ b/gradle.properties
@@ -81,7 +81,7 @@ graphqlVersion=0.6.0
 protocToolVersion=0.1.1
 
 # OpenAPI Module
-openapiVersion=1.6.2-20230831-194800-fdf8c9d
+openapiVersion=1.6.2
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
