Update the GraphQL tool version

--- a/gradle.properties
+++ b/gradle.properties
@@ -77,7 +77,7 @@ devToolsVersion=1.3.0
 ballerinaCommandVersion=1.4.1
 
 # GraphQL Tool
-graphqlVersion=0.8.0
+graphqlVersion=0.8.1-20231017-103900-3548263
 
 # Protoc Tool
 protocToolVersion=0.2.0
