--- a/gradle.properties
+++ b/gradle.properties
@@ -75,7 +75,7 @@ devToolsVersion=1.1.1
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.6.0
+graphqlVersion=0.6.1-20231017-104200-5890d1f
 
 # Protoc Tool
 protocToolVersion=0.1.1
