Update the GraphQL tool version

--- a/gradle.properties
+++ b/gradle.properties
@@ -76,7 +76,7 @@ devToolsVersion=1.2.0
 ballerinaCommandVersion=1.4.1
 
 # GraphQL Tool
-graphqlVersion=0.7.2-20231017-104200-1bf978e
+graphqlVersion=0.7.2
 
 # Protoc Tool
 protocToolVersion=0.1.2
