--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.7.3-SNAPSHOT
+version=2201.7.4
 codeName=swan-lake
-ballerinaLangVersion=2201.7.3
+ballerinaLangVersion=2201.7.4
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2023R1
