Update GraphQL tool version

--- a/gradle.properties
+++ b/gradle.properties
@@ -75,7 +75,7 @@ devToolsVersion=1.1.1
 ballerinaCommandVersion=1.4.1
 
 # GraphQL Tool
-graphqlVersion=0.6.1-20231017-104200-5890d1f
+graphqlVersion=0.6.1
 
 # Protoc Tool
 protocToolVersion=0.1.1
