--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.2
+ballerinaLangVersion=2201.8.3-20231119-151400-9cb79da7
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
