Update OpenAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -83,7 +83,7 @@ graphqlVersion=0.8.1-20231117-173400-8086555
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.0
+openapiVersion=1.8.1-20231120-134700-8ce672c
 
 # AsyncAPI Module
 asyncapiVersion=0.7.0
