--- a/gradle.properties
+++ b/gradle.properties
@@ -70,7 +70,7 @@ stdlibSqlVersion=1.11.1
 stdlibPersistVersion=1.2.0
 
 # Persist Tool
-persistToolVersion=1.2.0
+persistToolVersion=1.2.1-20231120-161400-5b1b90b
 
 # Dev Tools
 devToolsVersion=1.3.1
