Update ballerina tool versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -70,23 +70,23 @@ stdlibSqlVersion=1.11.1
 stdlibPersistVersion=1.2.0
 
 # Persist Tool
-persistToolVersion=1.2.1-20231120-161400-5b1b90b
+persistToolVersion=1.2.1
 
 # Dev Tools
 devToolsVersion=1.3.1
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlVersion=0.8.1-20231120-114700-ea32f2f
+graphqlVersion=0.8.1
 
 # Protoc Tool
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.1-20231120-134700-8ce672c
+openapiVersion=1.8.1
 
 # AsyncAPI Module
-asyncapiVersion=0.7.0
+asyncapiVersion=0.7.1
 
 c2cVersion=2.11.2
 
