--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.8.4-SNAPSHOT
+version=2201.8.4-20231124-152400-e47deb40
 codeName=swan-lake
 
 ballerinaLangVersion=2201.8.3
