--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.8.4-20231124-152400-e47deb40
+version=2201.8.4-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.3
+ballerinaLangVersion=2201.8.4-20231124-152400-e47deb40
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
