--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.4-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.4-20231124-152400-e47deb40
+ballerinaLangVersion=2201.8.4
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
