--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.7.5
+version=2201.7.5-SNAPSHOT
 codeName=swan-lake
-ballerinaLangVersion=2201.7.4
+ballerinaLangVersion=2201.7.5-20231129-233900-f228b145
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2023R1
