--- a/gradle.properties
+++ b/gradle.properties
@@ -76,7 +76,7 @@ devToolsVersion=1.2.0
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlVersion=0.7.2
+graphqlVersion=0.7.3-20231203-093200-70d132f
 
 # Protoc Tool
 protocToolVersion=0.1.2
