--- a/gradle.properties
+++ b/gradle.properties
@@ -76,7 +76,7 @@ devToolsVersion=1.2.0
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlVersion=0.7.3-20231204-160000-870f7b0
+graphqlVersion=0.7.3
 
 # Protoc Tool
 protocToolVersion=0.1.2
