--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ graphqlVersion=0.7.3
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.4-20231130-144900-0fb7142
+openapiVersion=1.7.4
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
