--- a/.github/workflows/daily-build-editor.yml
+++ b/.github/workflows/daily-build-editor.yml
@@ -56,6 +56,7 @@ jobs:
           TEST_MODE_ACTIVE: true
         run:  |
           cd ballerina-dev-tools
+          sed -i 's/ballerinaLangVersion=[0-9]\+\(\.[0-9]\+\)\{2\}-[0-9]\+-[0-9a-f]\+/ballerinaLangVersion=SNAPSHOT/' gradle.properties
           ./gradlew clean build --stacktrace --scan -x test  --console=plain --no-daemon --continue publishToMavenLocal
           cd ..
       - name: Checkout Distribution Repository
@@ -89,6 +90,8 @@ jobs:
           TEST_MODE_ACTIVE: true
         run: |
             cd ballerina-distribution
+            sed -i 's/ballerinaLangVersion=[0-9]\+\(\.[0-9]\+\)\{2\}-[0-9]\+-[0-9a-f]\+/ballerinaLangVersion=SNAPSHOT/' gradle.properties
+            sed -i 's/devToolsVersion=[0-9]\+\(\.[0-9]\+\)\{2\}-[0-9]\+-[0-9a-f]\+/devToolsVersion=SNAPSHOT/' gradle.properties
             ./gradlew clean build --stacktrace --scan -x test --console=plain --no-daemon --continue -x project-api-tests:test
       - name: Create linux-deb
         id: run_installers_deb
