--- a/gradle.properties
+++ b/gradle.properties
@@ -83,7 +83,7 @@ graphqlVersion=0.5.1
 protocToolVersion=0.1.0
 
 # OpenAPI Module
-openapiVersion=1.5.2
+openapiVersion=1.5.3-20231218-094500-220e932
 
 # AsyncAPI Module
 asyncapiVersion=0.5.0
