Update lang version

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.5.5-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.5.5
+ballerinaLangVersion=2201.5.5-20231220-115600-2e1fa1f4
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 
